<resources>
    <string name="app_name">SB Delivery</string>

    <!--region login-->
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Пароль</string>
    <string name="login_title">Вход</string>
    <string name="login_enter">Войти</string>
    <string name="login_registration">Регистрация</string>
    <string name="login_recover">Забыли пароль?</string>
    <!--end region-->

    <!--region registration-->
    <string name="registration_name_hint">Имя</string>
    <string name="registration_surname_hint">Фамилия</string>
    <string name="registration_email_hint">E-mail</string>
    <string name="registration_password_hint">Пароль</string>
    <string name="registration_title">Регистрация</string>
    <string name="registration_enter">Вход</string>
    <string name="registration_register">Зарегистрироваться</string>
    <!--end region-->

    <!--region password recovery-->
    <string name="password_title">Восстановление пароля</string>
    <string name="password_input_email_long_hint">Введите электронную почту, которую вы использовали при регистрации, и мы вышлем на нее код для восстановления пароля</string>
    <string name="password_input_email_hint">E-mail</string>
    <string name="password_send">Отправить</string>
    <string name="password_input_code">Введите проверочный код</string>
    <string name="password_input_new_password">Введите новый пароль</string>
    <string name="password_password_hint">Пароль</string>
    <string name="password_repeat_password_hint">Повторите пароль</string>
    <string name="password_save">Сохранить</string>
    <!--end region-->

    <!--region menu.xml-->
    <string name="menu_open">Открыть меню</string>
    <string name="menu_close">Закрыть меню</string>
    <string name="menu_main">Главная</string>
    <string name="menu_menu">Меню</string>
    <string name="menu_favorites">Избранное</string>
    <string name="menu_basket">Корзина</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_orders">Заказы</string>
    <string name="menu_push">Уведомления</string>
    <string name="menu_about_app">О приложении</string>
    <!--end region-->

    <!--region dashboard-->
    <string name="dashboard_title">Главная</string>
    <string name="dashboard_recommended_section">Рекомендуем</string>
    <string name="dashboard_best_section">Лучшее</string>
    <string name="dashboard_popular_section">Популярное</string>
    <string name="dashboard_all_items">См. все</string>
    <string name="dashboard_badge">АКЦИЯ</string>
    <!--end region-->

    <!--region zeroData-->
    <string name="zero_cell_no_data_title">Данные отсутствуют</string>
    <string name="zero_cell_error_no_data_title">Ошибка</string>
    <string name="zero_cell_no_data_content">В настоящий момент данный раздел пуст</string>
    <string name="zero_cell_error_no_data_content">Произошла ошибка во время загрузки данных, попробуйте повторить позже.</string>
    <!--end region-->

    <!--region dish-->
    <string name="dish_add">Добавить в корзину</string>
    <string name="dish_review">Отзывы</string>
    <string name="dish_add_review">Добавить отзыв</string>
    <string name="dish_plus">+</string>
    <string name="dish_minus">-</string>
    <string name="dish_count_default">1</string>
    <string name="dish_badge">АКЦИЯ</string>
    <string name="dish_max_rating">/5</string>
    <!--end region-->

    <!--region review-->
    <string name="review_title">Оставить отзыв</string>
    <string name="review_input_hint">Введите отзыв</string>
    <string name="review_send">Отправить</string>
    <!--end region-->
</resources>