<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_website_home"
        android:title="@string/menu_main"
        
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuFragment"
        android:icon="@drawable/ic_bowl_full_of_food"
        android:title="@string/menu_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/likeFragment"
        android:icon="@drawable/ic_heart"
        android:title="@string/menu_favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/basketFragment"
        android:icon="@drawable/ic_baseline_shopping_cart"
        android:title="@string/menu_basket"
        app:actionLayout="@layout/menu_item"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/ic_orders"
        android:title="@string/menu_orders"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_bell"
        android:title="@string/menu_push"
        app:actionLayout="@layout/menu_item"
        app:showAsAction="ifRoom" />
</menu>