<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:theme="@style/AppThemeClear">

    <include layout="@layout/view_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/password_input_new_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/OutlinedInputLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_password_hint"
            app:errorTextColor="@color/error_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInputEditText"
                style="@style/EditTextOneLineInput"
                android:imeOptions="actionNext|flagNoExtractUi"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatPasswordInputLayout"
            style="@style/OutlinedInputLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_repeat_password_hint"
            app:errorTextColor="@color/error_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeatPasswordInputEditText"
                style="@style/EditTextOneLineInput"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/savePasswordButton"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:text="@string/password_save" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>