<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_corners"
    android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minusButton"
        style="@style/TextBigTitle"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:fontFamily="@font/roboto_light"
        android:text="@string/dish_minus"
        android:clickable="true"
        android:focusable="true"
        android:enabled="true"
        android:textColor="@color/color_accent" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color_border"
        android:text="@string/dish_minus" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/countTextView"
        style="@style/TextBigTitle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/dish_count_default"
        android:textColor="@color/color_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color_border"
        android:text="@string/dish_minus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plusButton"
        style="@style/TextBigTitle"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:fontFamily="@font/roboto_light"
        android:text="@string/dish_plus"
        android:clickable="true"
        android:focusable="true"
        android:enabled="true"
        android:textColor="@color/color_accent" />


</LinearLayout>